# ShortLinkCpp

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  config.json  vcpkg.json
.zed/: debug.json
src/: main.cpp
src/gen_code/: gen_code.cpp  gen_code.h
src/handlers/: handlers.cpp  handlers.h
src/storage/: IStorage.h  LinkManager.cpp  LinkManager.h
